[CHG] Update after own branch myodoo-server

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>odoo-addons</name>
 	<comment></comment>
 	<projects>
+		<project>myodoo-server</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
