[CHG] auto_reload ergänzt

--- a/scripts/server-install-helpers/odoo-server.conf
+++ b/scripts/server-install-helpers/odoo-server.conf
@@ -7,6 +7,11 @@ db_host = False
 db_port = False
 db_user = odoo
 db_password = False
+
+; enable auto-reloading of python files and xml files without having to restart the server.
+; require: apt-get install python-pyinotify
+auto_reload = True
+
 addons_path = /opt/odoo/odoo-server/addons
 
 ;dbfilter='^openerp7$'
@@ -15,7 +20,3 @@ addons_path = /opt/odoo/odoo-server/addons
 ;Log settings
 logfile = /var/log/odoo/odoo-server.log
 log_level = error
-
-;nginx setting
-;xmlrpc_interface = 127.0.0.1
-;netrpc_interface = 127.0.0.1
