--- a/scripts/server-install-helpers/odoo-server.conf
+++ b/scripts/server-install-helpers/odoo-server.conf
@@ -9,7 +9,7 @@ db_user = odoo
 db_password = False
 
 ; enable auto-reloading of python files and xml files without having to restart the server.
-; require: apt-get install python-pyinotify
+; require: easy_install pyinotify
 auto_reload = True
 
 addons_path = /opt/odoo/odoo-server/addons
