--- a/scripts/server-install-helpers/odoo-server.conf
+++ b/scripts/server-install-helpers/odoo-server.conf
@@ -1,22 +1,110 @@
+
 [options]
 ; Mit diesem Passwort greifen Sie auf die Datenbank zu:
 ; Passwort zum Datenbank anlegen wird in Datei "odoo-server/openerp/tools/config.py" definiert.
 ; Klasse: class configmanager
 
+; set the default timezone for openerp interface
+timezone = Europe/Berlin
+; do not change this
 db_host = False
+; if False then Odoo will fallback to 5432
 db_port = False
+; the PostgreSQL connection role Odoo will use to connect to its databases
 db_user = odoo
 db_password = False
+;db_maxconn = 64
+
+;db_name = False
+db_template = template1
+dbfilter = .*
+
 
 ; enable auto-reloading of python files and xml files without having to restart the server.
-; require: easy_install pyinotify
-auto_reload = True
-
+;auto_reload = True
+;proxy-mode = True
 addons_path = /opt/odoo/odoo-server/addons
 
-;dbfilter='^openerp7$'
-;list_db=False
+; These options are really important and depend on the type of
+; deployment you want to have so read the doc carefully and
+; set these values accordingly
+;workers = 4
+max_cron_threads = 2
+limit_memory_hard = 2147483648
+limit_memory_soft = 671088640
+limit_request = 4096
+limit_time_cpu = 120
+limit_time_real = 180
+
 
 ;Log settings
 logfile = /var/log/odoo/odoo-server.log
 log_level = error
+;log_handler = [':INFO']
+;login_message = False
+
+;logrotate = True
+
+; additionnal parmameter for version 8+
+;data_dir = /opt/odoo/data
+;longpolling_port = 8072
+;proxy_mode = False
+
+xmlrpc = True
+xmlrpc_interface =
+xmlrpc_port = 8069
+xmlrpcs = True
+xmlrpcs_interface =
+xmlrpcs_port = 8071
+
+; -----------------------------------------------------------------
+; Below options are less critical but you are welcome to tweak them
+; -----------------------------------------------------------------
+
+csv_internal_sep = ,
+
+;debug_mode = False
+;demo = {}
+
+;email_from = False
+;import_partial =
+
+;list_db = True
+
+;netrpc = False
+;netrpc_interface =
+;netrpc_port = 8070
+
+osv_memory_age_limit = 1.0
+osv_memory_count_limit = False
+
+;pg_path = None
+;pidfile = None
+
+;reportgz = False
+
+;secure_cert_file = server.cert
+;secure_pkey_file = server.pkey
+
+;server_wide_modules = None
+
+;smtp_password = False
+;smtp_port = 25
+;smtp_server = localhost
+;smtp_ssl = False
+;smtp_user = False
+
+;static_http_document_root = None
+;static_http_enable = False
+;static_http_url_prefix = None
+
+;syslog = False
+
+;test_commit = False
+;test_enable = False
+;test_file = False
+;test_report_directory = False
+
+translate_modules = ['all']
+;without_demo = False
+
