[CHG] Überarbeitung und Bereinigung der Skripte

--- a/scripts/server-install-helpers/odoo-server.conf
+++ b/scripts/server-install-helpers/odoo-server.conf
@@ -21,7 +21,7 @@ dbfilter = .*
 
 
 ; enable auto-reloading of python files and xml files without having to restart the server.
-;auto_reload = True
+auto_reload = True
 ;proxy-mode = True
 addons_path = /opt/odoo/odoo-server/addons
 
