--- a/scripts/server-install-helpers/postgresql.conf
+++ b/scripts/server-install-helpers/postgresql.conf
@@ -61,7 +61,7 @@ external_pid_file = '/var/run/postgresql/9.4-main.pid'			# write an extra PID fi
 					# defaults to 'localhost'; use '*' for all
 					# (change requires restart)
 port = 5432				# (change requires restart)
-# max_connections = 100			# (change requires restart)
+max_connections = 80			# (change requires restart)
 # Note:  Increasing max_connections costs ~400 bytes of shared memory per
 # connection slot, plus lock space (see max_locks_per_transaction).
 #superuser_reserved_connections = 3	# (change requires restart)
@@ -112,7 +112,7 @@ ssl_key_file = '/etc/ssl/private/ssl-cert-snakeoil.key'		# (change requires rest
 
 # - Memory -
 
-# shared_buffers = 128MB			# min 128kB
+shared_buffers = 1GB			# min 128kB > etwa 40 % Hauptspeicher
 					# (change requires restart)
 #huge_pages = try			# on, off, or try
 					# (change requires restart)
@@ -123,9 +123,9 @@ ssl_key_file = '/etc/ssl/private/ssl-cert-snakeoil.key'		# (change requires rest
 # per transaction slot, plus lock space (see max_locks_per_transaction).
 # It is not advisable to set max_prepared_transactions nonzero unless you
 # actively intend to use prepared transactions.
-#work_mem = 4MB				# min 64kB
-#maintenance_work_mem = 64MB		# min 1MB
-#autovacuum_work_mem = -1		# min 1MB, or -1 to use maintenance_work_mem
+work_mem = 16MB				# min 64kB
+maintenance_work_mem = 64MB		# min 1MB
+autovacuum_work_mem = -1		# min 1MB, or -1 to use maintenance_work_mem
 #max_stack_depth = 2MB			# min 100kB
 dynamic_shared_memory_type = posix	# the default is the first option
 					# supported by the operating system:
@@ -175,7 +175,7 @@ dynamic_shared_memory_type = posix	# the default is the first option
 #wal_level = minimal			# minimal, archive, hot_standby, or logical
 					# (change requires restart)
 #fsync = on				# turns forced synchronization on or off
-#synchronous_commit = on		# synchronization level;
+synchronous_commit = off		# synchronization level;
 					# off, local, remote_write, or on
 #wal_sync_method = fsync		# the default is the first option
 					# supported by the operating system:
@@ -187,7 +187,7 @@ dynamic_shared_memory_type = posix	# the default is the first option
 #full_page_writes = on			# recover from partial page writes
 #wal_log_hints = off			# also do full page writes of non-critical updates
 					# (change requires restart)
-#wal_buffers = -1			# min 32kB, -1 sets based on shared_buffers
+wal_buffers = 8MB			# min 32kB, -1 sets based on shared_buffers
 					# (change requires restart)
 #wal_writer_delay = 200ms		# 1-10000 milliseconds
 
@@ -196,9 +196,9 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 # - Checkpoints -
 
-#checkpoint_segments = 3		# in logfile segments, min 1, 16MB each
+checkpoint_segments = 16		# in logfile segments, min 1, 16MB each
 #checkpoint_timeout = 5min		# range 30s-1h
-#checkpoint_completion_target = 0.5	# checkpoint target duration, 0.0 - 1.0
+checkpoint_completion_target = 0.9	# checkpoint target duration, 0.0 - 1.0
 #checkpoint_warning = 30s		# 0 disables
 
 # - Archiving -
@@ -284,7 +284,7 @@ dynamic_shared_memory_type = posix	# the default is the first option
 #cpu_tuple_cost = 0.01			# same scale as above
 #cpu_index_tuple_cost = 0.005		# same scale as above
 #cpu_operator_cost = 0.0025		# same scale as above
-#effective_cache_size = 4GB
+effective_cache_size = 2GB		# ca. 50-75% des Hauptspeichers
 
 # - Genetic Query Optimizer -
 
@@ -298,8 +298,8 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 # - Other Planner Options -
 
-#default_statistics_target = 100	# range 1-10000
-#constraint_exclusion = partition	# on, off, or partition
+default_statistics_target = 100		# range 1-10000
+constraint_exclusion = on		# on, off, or partition
 #cursor_tuple_fraction = 0.1		# range 0.0-1.0
 #from_collapse_limit = 8
 #join_collapse_limit = 8		# 1 disables collapsing of explicit
@@ -465,30 +465,30 @@ stats_temp_directory = '/var/run/postgresql/9.4-main.pg_stat_tmp'
 # AUTOVACUUM PARAMETERS
 #------------------------------------------------------------------------------
 
-#autovacuum = on			# Enable autovacuum subprocess?  'on'
+autovacuum = on				# Enable autovacuum subprocess?  'on'
 					# requires track_counts to also be on.
-#log_autovacuum_min_duration = -1	# -1 disables, 0 logs all actions and
+log_autovacuum_min_duration = 0		# -1 disables, 0 logs all actions and
 					# their durations, > 0 logs only
 					# actions running at least this number
 					# of milliseconds.
-#autovacuum_max_workers = 3		# max number of autovacuum subprocesses
+autovacuum_max_workers = 6		# max number of autovacuum subprocesses
 					# (change requires restart)
-#autovacuum_naptime = 1min		# time between autovacuum runs
-#autovacuum_vacuum_threshold = 50	# min number of row updates before
+autovacuum_naptime = 15s		# time between autovacuum runs
+autovacuum_vacuum_threshold = 25	# min number of row updates before
 					# vacuum
-#autovacuum_analyze_threshold = 50	# min number of row updates before
+autovacuum_analyze_threshold = 10	# min number of row updates before
 					# analyze
-#autovacuum_vacuum_scale_factor = 0.2	# fraction of table size before vacuum
-#autovacuum_analyze_scale_factor = 0.1	# fraction of table size before analyze
+autovacuum_vacuum_scale_factor = 0.1	# fraction of table size before vacuum
+autovacuum_analyze_scale_factor = 0.05	# fraction of table size before analyze
 #autovacuum_freeze_max_age = 200000000	# maximum XID age before forced vacuum
 					# (change requires restart)
 #autovacuum_multixact_freeze_max_age = 400000000	# maximum multixact age
 					# before forced vacuum
 					# (change requires restart)
-#autovacuum_vacuum_cost_delay = 20ms	# default vacuum cost delay for
+autovacuum_vacuum_cost_delay = 10ms	# default vacuum cost delay for
 					# autovacuum, in milliseconds;
 					# -1 means use vacuum_cost_delay
-#autovacuum_vacuum_cost_limit = -1	# default vacuum cost limit for
+autovacuum_vacuum_cost_limit = 1000	# default vacuum cost limit for
 					# autovacuum, -1 means use
 					# vacuum_cost_limit
 
@@ -612,13 +612,3 @@ default_text_search_config = 'pg_catalog.english'
 #------------------------------------------------------------------------------
 
 # Add settings for extensions here
-default_statistics_target = 50 # pgtune wizard 2015-04-21
-maintenance_work_mem = 120MB # pgtune wizard 2015-04-21
-constraint_exclusion = on # pgtune wizard 2015-04-21
-checkpoint_completion_target = 0.9 # pgtune wizard 2015-04-21
-effective_cache_size = 1408MB # pgtune wizard 2015-04-21
-work_mem = 12MB # pgtune wizard 2015-04-21
-wal_buffers = 8MB # pgtune wizard 2015-04-21
-checkpoint_segments = 16 # pgtune wizard 2015-04-21
-shared_buffers = 480MB # pgtune wizard 2015-04-21
-max_connections = 80 # pgtune wizard 2015-04-21
