[FIX] Korrekturen im prepare script

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ install/win32/meta.py
 /share/
 /src/
 /.settings/
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/odoo-addons.iml
+.idea/workspace.xml
