[ADD] Modul zur Keyboard Steuerung

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ install/win32/meta.py
 /share/
 /src/
 /.settings/
+
+# PyCharm
+.idea/
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/misc.xml
 .idea/modules.xml
